--- a/packages/imagemap/composer.json
+++ b/packages/imagemap/composer.json
@@ -16,5 +16,12 @@
             "BaoDo\\ImageMap\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "laravel": {
+            "providers": [
+                "BaoDo\\ImageMap\\Providers\\ImageMapServiceProvider"
+            ],
+        }
+    }
 }
